feat: Add offline support with caching and sync queue
- Add CacheService with Hive for offline data storage
- Add ConnectivityService for network status monitoring
- Add SyncService for offline action queue with retry mechanism
- Add ConnectivityProvider for state management
- Update ApiService with cache-first strategy
- Update CartProvider with offline support
- Add modern ConnectivityBanner widget
- Add localization strings for offline mode
- Update app icons
- Add email verification and refresh token support

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -101,6 +101,8 @@
   "iHaveVerified": "لقد قمت بالتحقق",
   "resendEmail": "إعادة إرسال البريد الإلكتروني",
   "resendFeatureComingSoon": "ميزة إعادة الإرسال قريباً",
-  "pleaseVerifyEmail": "يرجى التحقق من عنوان بريدك الإلكتروني."
+  "pleaseVerifyEmail": "يرجى التحقق من عنوان بريدك الإلكتروني.",
+  "offlineMode": "وضع عدم الاتصال",
+  "offlineModeDescription": "قد تكون بعض الميزات محدودة"
 }
 
