--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -101,6 +101,8 @@
   "iHaveVerified": "Doğruladım",
   "resendEmail": "E-postayı Tekrar Gönder",
   "resendFeatureComingSoon": "Tekrar gönderme özelliği yakında gelecek",
-  "pleaseVerifyEmail": "Lütfen e-posta adresinizi doğrulayın."
+  "pleaseVerifyEmail": "Lütfen e-posta adresinizi doğrulayın.",
+  "offlineMode": "Çevrimdışı Mod",
+  "offlineModeDescription": "Bazı özellikler sınırlı olabilir"
 }
 
