UPDATED ALL APP AND API CUSTOMIZE

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -212,6 +212,9 @@
   "enterValidAmount": "أدخل مبلغًا صالحًا",
   "enterValidTime": "أدخل وقتًا صالحًا",
   "optional": "اختياري",
-  "deliveryFee": "رسوم التوصيل"
+  "deliveryFee": "رسوم التوصيل",
+  "addressRequiredTitle": "العنوان مطلوب",
+  "addressRequiredMessage": "تحتاج إلى إضافة عنوان توصيل قبل تقديم الطلب.",
+  "addAddress": "إضافة عنوان"
 }
 
